-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.11.1, Qt Creator 4.12.0-beta1
-
None
-
-
effb6133fd68e8c1bb2dcef8ce8b49ef83e15c8c (qt-creator/qt-creator/4.11)
Hi,
It looks like the qmljsdebugger is not attached to a QuickTest when launching it from the Tests panel with the Debug This Test menu entry (available from a right mouse clic)
This problem could be easily reproduced following these steps:
- create a new QuickTest from QtCreator interface (either qmake or cmake will do the same)
- put a breakpoint at line 8 in this file:
import QtQuick 2.0 import QtTest 1.0 TestCase { name: "test" function test_case1() { compare(1 + 1, 2, "sanity check"); verify(true); } }
- Click on Debug This Test in the Tests Panel
- The debugger does not stop on the breakpoint
Note: When using Start debugging of startup project, it works fine.
Note 2: A basic c++ gtest actually works too when launching it with Debug This Test
Have a nice day,
| For Gerrit Dashboard: QTCREATORBUG-23709 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 293542,3 | AutoTest: Fix debugging of QuickTests | 4.11 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |