AutoTest: Fix debugging of QuickTests

Fixes: QTCREATORBUG-23709
Change-Id: Ib728fe0c4ec4eb99759fcc324e987e3866be42f6
Reviewed-by: David Schulz <david.schulz@qt.io>